--- a/index.jade
+++ b/index.jade
@@ -96,7 +96,7 @@ html(lang="end")
                 "HTML, CSS3, SCSS, Jade, Bootstrap v3, Javascript",
                 "Dec'16 - Jan'17",
                 "website_design.html",
-                "http://placehold.it/1500x925"
+                "img/insta_home.png"
             )
             
             +project_row(
