--- a/website_design.jade
+++ b/website_design.jade
@@ -51,27 +51,28 @@ html(lang="en")
                         
                         p Based on above research I set the following design goals.
                         
-                        table.table.table-bordered.heuristic-table
-                            tbody
-                                tr
-                                    td.col-md-6
-                                        dl
-                                            dt Let work speak for itself
-                                            dd I didn't want this website to be the primary source of interest for the reader. I wanted reader to be more focused on my project work
-                                    td.col-md-6
-                                        dl
-                                            dt Reader can quickly assess work quality
-                                            dd I was aware that readers have to read hundreds of portfolios and are short on time. Help them help me.
+                        .table-responsive
+                            table.table.table-bordered.heuristic-table
+                                tbody
+                                    tr
+                                        td.col-md-6
+                                            dl
+                                                dt Let work speak for itself
+                                                dd I didn't want this website to be the primary source of interest for the reader. I wanted reader to be more focused on my project work
+                                        td.col-md-6
+                                            dl
+                                                dt Reader can quickly assess work quality
+                                                dd I was aware that readers have to read hundreds of portfolios and are short on time. Help them help me.
 
-                                tr
-                                    td.col-md-6
-                                        dl
-                                            dt Reader is guided through my work
-                                            dd Since I won't be present to walk through the portfolio the reader, the website should be able to guide reader through the portfolio
-                                    td.col-md-6
-                                        dl
-                                            dt Reader can read on any device type
-                                            dd This meant the website need to be responsive at-least and being adaptive to device type would be a very nice thing to have                        
+                                    tr
+                                        td.col-md-6
+                                            dl
+                                                dt Reader is guided through my work
+                                                dd Since I won't be present to walk through the portfolio the reader, the website should be able to guide reader through the portfolio
+                                        td.col-md-6
+                                            dl
+                                                dt Reader can read on any device type
+                                                dd This meant the website need to be responsive at-least and being adaptive to device type would be a very nice thing to have                        
                         
                         h2 Explorations &amp; decisions
                     
