--- a/website_design.jade
+++ b/website_design.jade
@@ -222,7 +222,7 @@ html(lang="en")
                         
                         p I really want to get full control of the layout and be able to reuse my layout specifications across all pages and minimize duplicate work. As existing tools did not suffice, I hand coded it myself.
                         p The website is built using <strong>Bootstrap v3</strong>. I apply the <strong>DRY principle</strong> and use <strong>SCSS</strong> and <strong>Jade</strong> to that advantage.
-                        p I used Brackets editor. Code can be found here.
+                        p I used Brackets editor. Code can be found here on <a href="https://github.com/radhikamani88/radhikamani88.github.io">github</a>
                         
         .container-fluid.showcase
             .row
