--- a/index.css
+++ b/index.css
@@ -319,49 +319,65 @@ h6 {
   font-family: "ff-meta-web-pro", sans-serif;
   padding: 1rem;
   border: 1px solid darkgray;
-  background-color: #0047AB;
   color: white; }
 
 /* line 75, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+.code-button a {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.8); }
+
+/* line 80, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+.case-button a {
+  background-color: #0047AB; }
+
+/* line 84, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+.case-button a:hover {
+  background-color: #deecff; }
+
+/* line 88, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+.code-button a:hover {
+  color: black;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+/* line 93, /home/local/ANT/ajgopala/portfolio_new/index.scss */
 .view-case-study a:hover {
   color: black;
-  background-color: #deecff;
   transition: 0.3s;
   text-decoration: none; }
 
 @media (min-width: 768px) {
-  /* line 83, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 100, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .site-sub-title {
     text-align: left; }
-  /* line 87, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 104, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .site-menu {
     font-family: "ff-meta-web-pro", sans-serif;
     text-align: right; }
-  /* line 92, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 109, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .vcenter {
     display: inline-block;
     float: none;
     vertical-align: bottom; }
-  /* line 98, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 115, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .project-banner-setting {
     margin-top: 0; }
-  /* line 102, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 119, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .home-brief {
     padding-bottom: 5rem; }
-  /* line 106, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 123, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .process_diagram {
     display: inherit;
     margin: 0; }
-  /* line 111, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 128, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .separator {
     display: none; }
-  /* line 115, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 132, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .view-case-study0 {
     display: inherit;
     padding-top: 1rem; } }
 
 @media (min-width: 1200px) {
-  /* line 122, /home/local/ANT/ajgopala/portfolio_new/index.scss */
+  /* line 139, /home/local/ANT/ajgopala/portfolio_new/index.scss */
   .container {
     width: 1400px !important; } }
 
