--- a/tufte2.scss
+++ b/tufte2.scss
@@ -161,6 +161,10 @@ p.subtitle {
     line-height: 1;
 }
 
+.bottompadding {
+    padding-bottom: $ledding;
+}
+
 .numeral {
     font-family: et-book-roman-old-style;
 }
