--- a/instapark.jade
+++ b/instapark.jade
@@ -25,7 +25,7 @@ html(lang="en")
             "http://placehold.it/1500x925"
         )
 
-        +navbar_mixin(pageTitle, [["challenge","Challenge"]])
+        +navbar_mixin(pageTitle, [["process", "Process"], ["define", "Defining MVP1"], ["design", "Designing MVP1"], ["impact", "Impact"], ["learnings", "Learnings"]])
 
         .container
             .row
@@ -46,7 +46,7 @@ html(lang="en")
                         p Unfortunately, no application exists to solve these problems even when all the technology to implement a solution exists. As a student, I was myself frustrated by these problems and thought of building an application to address these needs.
                         p I built a solution to address these needs.
                         
-                        h2 Process
+                        h2(id="process") Process
                         
                         h3 Methodology
                         
@@ -81,7 +81,7 @@ html(lang="en")
                         p The initial product focused heavily on late night parking and women safety. However, after more research I found out that that was not the case and price, availability and convenience were important factors. Finding parking for events turned out to be an important ask as well.
                         p Because I was iterating quickly through various design artifacts like paper prototypes and low-fis initially, I found it easy to change product direction without much loss of effort.                        
 
-                        h2 Defining MVP1
+                        h2(id='define') Defining MVP1
 
                         h3 Ideation
                         
@@ -141,7 +141,7 @@ html(lang="en")
             .row
                 article.nobottompadding
                     section
-                        h2 Designing MVP1
+                        h2(id="design") Designing MVP1
                         
                         h3 Personas
                         
@@ -259,12 +259,12 @@ html(lang="en")
             .row
                 article.nobottompadding
                     section
-                        h3 Impact
+                        h2(id="impact") Impact
                         
                         p The hi-fidelity prototypes were well received by student participants. They really liked the P2P parking idea and the fact that they were provided suggestions for determining parking price. 
                         
                         p We then discussed about getting this implemented. I had researched earlier about the ParkWhiz API which would allow us to get the MVP1 for thiis app quickly implemented. Due to my commitments to other projects, I could not focus on developing an MVP1 app. I hope to do that soon though!
                         
-                        h3 Learnings
+                        h2(id="learnings") Learnings
                         
                         p This project had many firsts. This was my first large interaction design project. I learnt a lot about applying UX design process when building a product. I learnt that when building new products, when requirements are unclear, we need to be heavily grounded in research, listen carefully to our customers and adjust our course based on that. We should adopt a UX process that allows us to remain lean and agile and pivot quickly based on customers and so that we can quickly test our ideas with customers. I learnt the value of different UX design techniques like paper prototypes, wireframes, story boarding and hi-fidelity prototypes and when/when not to use them. Overall, this project was a great learning experience.
