Remove process state machine at top of home page ... too simplistic

--- a/index.jade
+++ b/index.jade
@@ -42,7 +42,7 @@ html(lang="end")
             .row.headline
                 .col-sm-6
                     h1.site-title Radhika Kolathumani
-                    img(src="path1.png" class="img-fluid process_diagram")
+                    // img(src="path1.png" class="img-fluid process_diagram")
                 #site-menu1.site-menu.col-sm-6
                     h6
                         span.selected work
